<resources>
    <string name="app_name">nailio</string>
    <string name="photo_button">Take a photo</string>
    <string name="main_instruction">Take a photo of your nail to get started</string>

    <string name="eval_nailio_score">YOUR NAILIO SCORE</string>\
    <string name="eval_button_learn">Learn more</string>
    <string name="eval_score_default">Calculating&#8230;</string>


    <string name="nailed_it">Wow! \nYou\'ve #NailedIt</string>
    <!-- normal -->
    <string name="verdict_normal"><font size="20">Wow! You\'ve #NailedIt. Your NAILIO score is great.
        Here are some tips to keep up the good work:</font></string>

    <string name="verdict_general_tips">• Wear rubber gloves when carrying out household cleaning
        \n• Avoid cutting your cuticles
        \n• Keep your hands and feet dry
        \n• Make sure you are taking your daily requirements in vitamins and minerals (Vitamin B, Calcium, and Zinc are the best here!)
        \n• Restrain from biting or picking your nails
        \n• Wear clean socks</string>

    <string name="bullet_point">• </string>
    <string name="advice1">Wear rubber gloves when carrying out household cleaning</string>
    <string name="advice2">Avoid cutting your cuticles</string>
    <string name="advice3">Trim your nails on a regular basis</string>
    <string name="advice4">Keep your hands and feet dry</string>
    <string name="advice5">Make sure you are taking your daily requirements in vitamins and minerals (Vitamin B, Calcium, and Zinc are the best here!)</string>
    <string name="advice6">Restrain from biting or picking your nails</string>
    <string name="advice7">Wear clean socks</string>


    <string name="verdict_other"><font size="20">NAILIO has sensed that you may be suffering from some sort of nail
        disease. \nPlease contact your GP for further sample testing. In the meantime, in order to
        maintain healthy nails, NAILIO advises you to:</font>
        </string>

    <string name="verdict_naildystrophy"><font size="20">NAILIO thinks you are likely to be suffering from a type
        of nail dystrophy. In most cases, this is not something serious to worry about.
        Nail dystrophy is the distortion and discolouration of a normal nail. No fungal infections
        have been recognised. It is likely your nail disfigurement is due to a lack of care and hygiene.</font>
    </string>



    <string name="verdict_onychomycosis"><font size="20">NAILIO has sensed that you may have <i>onychomycosis</i>. Please contact your GP for further
        sample testing.</font>

        \n\n<font size="24"><i>What is onychomycosis?</i></font>

        \n\nIt is a fungal infection of the nail. The symptoms that NAILIO has potentially recognised
        are nail discolouration and thickening. It effects about 10% of the adult population.

        \n\n<font size="24"><i>What happens if I do nothing about it?</i></font>

        \n\nThe infection can spread to other toes and result in Athlete’s foot. This can cause
        discomfort when walking and would not look very nice when you’re in your flip-flops on the beach!

        \n\n<font size="24"><i>What can I do?</i></font>

        \n\nAntifungal medicines are highly effective and widely available without prescription.
    </string>
    <string name="verdict_onycholysis"><font size="20">NAILIO has sensed that you may have <i>onycholysis</i>. Please contact your GP for further sample testing.</font>

        \n\n<font size="24"><i>What is onycholysis?</i></font>

        \n\nThis is a painless detachment of the nail from the nail bed. It is common around the ring
        finger but can happen to any finger- or toenails. There are a variety of causes for this
        including: nail trauma, infection, psoriasis, dermatitis, Raynaud’s syndrome,
        hyperthyroidism, or reactions to detergents.

        \n\n<font size="24"><i>What happens if I do nothing about it?</i></font>

        \n\nSome of the causes mentioned above normally result in other adverse effects upon the body.
        Therefore, onycholysis is a strong indicator that something may be wrong. Leaving it without
        checking with your GP is not advised.

        \n\n<font size="24"><i>What can I do?</i></font>

        \n\nAt the first instance, and when no involved causes are suspected, the dystrophy should
        clear within a few weeks. Keep the nail as dry as possible and allow the nail to reattach
        itself. Insist on trimming away any loose nail fragments to allow for clean nail regrowth.
        If the issue persists, contact your GP to forward you to a dermatologist.
    </string>

    <string name="verdict_melanonychia"><font size="20">NAILIO has sensed that you may have <i>melanonychia</i>. Please contact your GP for further sample testing.</font>

        \n\n<font size="24"><i>What is melanonychia?</i></font>

        \n\nThis an obvious decolourisation in the nails, where brown or black lines appear on your nails.
        They are usually vertically aligned from the bottom of the nailbed to the top. It is due to the deposit of melanin into the nail.

        \n\n<font size="24"><i>What happens if I do nothing about it?</i></font>

        \n\nUsually this is not something to worry about and may be due to a recent medication
        you have started taking. However, there is a risk it is due to a fungal infection or
        skin cancer if this is not due to any new medicines.

        \n\n<font size="24"><i>What can I do?</i></font>

        \n\nContact your GP if it is completely unexpected. If you see the symptoms develop on other nails, this could be a fungal infection and antifungal medicines are advisable.</string>



    <!-- notification -->
    <string name="notification_channel_name">reminder</string>
    <string name="notification_channel_description">reminder description</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
