<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Tips1Activity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tips1_custom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:text="TextView"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--TextView
            android:id="@+id/tips1_general"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/verdict_general_tips"
            android:textSize="18sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tips1_custom" /-->

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/tips_fab_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="32dp"
            android:clickable="true"
            app:backgroundTint="@color/colorGreen"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/table"
            app:srcCompat="@drawable/ic_home" />

        <TableLayout
            android:id="@+id/table"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tips1_custom">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_column="1"
                    android:text="@string/bullet_point"
                    android:textAppearance="@style/bullet_points_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_column="2"
                    android:text="@string/advice1"
                    android:textAppearance="@style/bullet_points_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_column="1"
                    android:text="@string/bullet_point"
                    android:textAppearance="@style/bullet_points_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_column="2"
                    android:text="@string/advice2"
                    android:textAppearance="@style/bullet_points_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_column="1"
                    android:text="@string/bullet_point"
                    android:textAppearance="@style/bullet_points_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_column="2"
                    android:text="@string/advice3"
                    android:textAppearance="@style/bullet_points_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_column="1"
                    android:text="@string/bullet_point"
                    android:textAppearance="@style/bullet_points_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_column="2"
                    android:text="@string/advice4"
                    android:textAppearance="@style/bullet_points_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_column="1"
                    android:text="@string/bullet_point"
                    android:textAppearance="@style/bullet_points_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_column="2"
                    android:text="@string/advice5"
                    android:textAppearance="@style/bullet_points_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_column="1"
                    android:text="@string/bullet_point"
                    android:textAppearance="@style/bullet_points_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_column="2"
                    android:text="@string/advice6"
                    android:textAppearance="@style/bullet_points_text" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_column="1"
                    android:text="@string/bullet_point"
                    android:textAppearance="@style/bullet_points_text" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_column="2"
                    android:text="@string/advice7"
                    android:textAppearance="@style/bullet_points_text" />
            </TableRow>

        </TableLayout>
    </android.support.constraint.ConstraintLayout>
</ScrollView>